trunk/Archive2/a7/737d88db6fdf1b/output
main.cpp:4:35: error: expected unqualified-id before '{' token
     static const std::vector<int> {1};
                                   ^
