trunk/Archive2/a7/737d88db6fdf1b/main.cpp
#include<vector>

struct x {
    static const std::vector<int> {1};
};

int main() {}